--- a/locale/ui_en-us.json
+++ b/locale/ui_en-us.json
@@ -1135,6 +1135,9 @@
 	"ui_editor_modal_delete_published_wallpapers_confirm_header" : "Permanently Delete {{title}}",
 	"ui_editor_modal_delete_published_wallpapers_confirm_body" : "Are you sure that you want to permanently delete {{title}} from the [[[Platform]]] Workshop?<br/><br/>The Workshop upload will be permanently deleted from the [[[Platform]]] Workshop and for every user who has subscribed to it.",
 	
+	"ui_editor_modal_texture_variant_option_incompatible_title" : "Incompatible Variant Option",
+	"ui_editor_modal_texture_variant_option_incompatible_message" : "The image or video you selected is not compatible with this texture. It must have the same resolution and needs to be the same type, you cannot mix images and videos in a texture.",
+	
 	"ui_editor_modal_dlc_prompt_title" : "Free DLC Required",
 	"ui_editor_modal_dlc_prompt_message_offline" : "This advanced functionality is part of the free <b>{{name}}</b> DLC, which requires {{size}} of disk space.<br/><br/>Please start [[[Platform]]] and restart Wallpaper Engine in order to download it.",
 	"ui_editor_modal_dlc_prompt_message_ask_download" : "This advanced functionality is part of the free <b>{{name}}</b> DLC, which requires {{size}} of disk space.<br/><br/>Should [[[Platform]]] download it now?",
@@ -1448,6 +1451,7 @@
 	"ui_editor_bone_constraints_friction" : "Friction",
 	"ui_editor_bone_constraints_gravity_direction" : "Gravity direction",
 	"ui_editor_bone_constraints_gravity_enabled" : "Gravity enabled",
+	"ui_editor_bone_constraints_gravity_strength" : "Gravity strength",
 	"ui_editor_bone_constraints_layout" : "Mode",
 	"ui_editor_bone_constraints_layout_advanced" : "Advanced",
 	"ui_editor_bone_constraints_layout_simple" : "Simple",
@@ -1472,6 +1476,7 @@
 	"ui_editor_bone_constraints_preset_gravity_rotation" : "Gravity rotation",
 	"ui_editor_bone_constraints_preset_ik_two_limbs" : "Inverse kinematics arm/leg",
 	"ui_editor_bone_constraints_preset_ik_constrained" : "Inverse kinematics constrained",
+	"ui_editor_bone_constraints_preset_ik_rope" : "IK rope 4 elements",
 	"ui_editor_bone_constraints_reset" : "Reset",
 	"ui_editor_bone_constraints_responsiveness" : "Responsiveness",
 	"ui_editor_bone_constraints_rigid_simulation" : "Rigid physics simulation",
@@ -1484,6 +1489,8 @@
 	"ui_editor_bone_constraints_tip_forward_angle" : "Tip forward angle",
 	"ui_editor_bone_constraints_tip_mass" : "Tip mass",
 	"ui_editor_bone_constraints_tip_size" : "Tip size",
+	"ui_editor_bone_constraints_friction" : "Friction",
+	"ui_editor_bone_constraints_mass" : "Mass",
 	"ui_editor_bone_constraints_translation_axes" : "Translation axes",
 	"ui_editor_bone_constraints_translational_friction" : "Translational friction",
 	"ui_editor_bone_constraints_translational_inertia" : "Translational inertia",
@@ -1502,6 +1509,8 @@
 	"ui_editor_bone_constraints_ik_constraints" : "IK constraints",
 	"ui_editor_bone_constraints_ik_constraint_rotation_max" : "Max rotation",
 	"ui_editor_bone_constraints_ik_constraint_rotation_min" : "Min rotation",
+	"ui_editor_bone_constraints_stretch_enabled" : "Stretch enabled",
+	"ui_editor_bone_constraints_free_endpoint" : "Free endpoint",
 	"ui_editor_bone_constraints_blending_hint" : "Match bone transforms with another bone dynamically during animation.",
 	"ui_editor_bone_constraints_blending_add" : "Add blend rule",
 	"ui_editor_bone_constraints_blending_add_empty" : "< Select a bone >",
@@ -1660,6 +1669,8 @@
 	"ui_editor_user_properties_combo_value" : "Selected combo value for this link:",
 	"ui_editor_user_properties_delete_warning_title" : "Removing Published User Property",
 	"ui_editor_user_properties_delete_warning_message" : "If you remove an existing property from a published wallpaper, you will break any settings and presets that other users have already created from your wallpaper.<br/><br/>We strongly recommend against this unless you have only published the wallpaper very recently or if you are removing a user property that was unused previously.",
+	"ui_editor_user_properties_delete_warning_title_unpublished" : "Remove User Property",
+	"ui_editor_user_properties_delete_warning_message_unpublished" : "Are you sure you want to delete the user property <b>{{name}}</b>?",
 	"ui_editor_user_properties_delete_warning_confirm" : "Delete Property",
 	
 	"ui_editor_system_resource_modal" : "Album Covers",
@@ -1863,6 +1874,7 @@
 	"ui_editor_scene_options_color" : "Color",
 	"ui_editor_scene_options_start_density" : "Start density",
 	"ui_editor_scene_options_end_density" : "End density",
+	"ui_editor_scene_options_physics" : "Physics",
 
 	"ui_editor_import_adjust_projection_center" : "Adjust wallpaper size and center",
 	"ui_editor_preview_shader_reload" : "Rebuilding shaders",
@@ -2255,7 +2267,7 @@
 	"ui_editor_properties_advanced_texture_settings" : "Advanced Texture Settings",
 	"ui_editor_properties_albedo" : "Albedo",
 	"ui_editor_properties_alert_danger" : "Attention:",
-	"ui_editor_properties_alert_message_nested_clipping_mask" : "A clipping mask is (partially) nested within another clipping mask, this is not supported. <a href='[[[var_url_editor_puppet_clipping_mask_nesting]]]'>Click here</a> for more information.",
+	"ui_editor_properties_alert_message_nested_clipping_mask" : "A clipping mask is incorrectly nested within another clipping mask. <a href='[[[var_url_editor_puppet_clipping_mask_nesting]]]'>Click here</a> for more information.",
 	"ui_editor_properties_alert_message_pivot_hint" : "Rotate and move the puppet with ALT + left/right click",
 	"ui_editor_properties_alert_message_pivot_paint_hint" : "While painting, rotate and move the puppet with ALT + left/right click",
 	"ui_editor_properties_alert_tip" : "Tip:",
@@ -2949,6 +2961,10 @@
 	"ui_editor_properties_weights" : "Weights",
 	"ui_editor_properties_when_mouse_button_pressed" : "When mouse button pressed",
 	"ui_editor_properties_width" : "Width",
+	"ui_editor_properties_wind_enabled" : "Wind enabled",
+	"ui_editor_properties_wind_direction" : "Wind direction",
+	"ui_editor_properties_wind_direction_depth" : "Wind direction depth",
+	"ui_editor_properties_wind_speed" : "Wind speed",
 	"ui_editor_properties_wireframe_opacity" : "Wireframe opacity",
 	"ui_editor_properties_worldspace" : "Worldspace",
 	"ui_editor_properties_write_alpha" : "Write alpha",
