--- a/locale/ui_en-us.json
+++ b/locale/ui_en-us.json
@@ -36,7 +36,7 @@
 	"ui_modal_updateavailable_title" : "New Update Available",
 	"ui_modal_updateavailable_body_distro" : "A new update for Wallpaper Engine has been downloaded by [[[Platform]]] (version <b>{{distroVersion}}</b>). Would you like to restart Wallpaper Engine now to apply the update?",
 	"ui_modal_updateavailable_body_title" : "Unsupported Windows Version",
-	"ui_modal_updateavailable_body_outdated" : "It looks like you are trying to use the latest version of Wallpaper Engine on Windows 7 or 8.</br></br>Please switch to the <i>beta</i> named 'Windows 7 support' of Wallpaper Engine through the Steam game properties first.",
+	"ui_modal_updateavailable_body_outdated" : "It looks like you are trying to use the latest version of Wallpaper Engine on Windows 7 or 8.<br/><br/>Please switch to the <i>beta</i> named 'Windows 7 support' of Wallpaper Engine through the Steam game properties first.",
 	"ui_modal_installationpath_error_title" : "Wrong Installation Path registered in Windows",
 	"ui_modal_installationpath_error_body" : "It looks like the program files of Wallpaper Engine have been moved after the installation. This breaks the auto start function and causes a number of problems.<br/><br/>You are currently running Wallpaper Engine from <b>{{runPath}}</b> but [[[Platform]]] has installed Wallpaper Engine to <b>{{steamPath}}</b>. The auto start needs to be updated to use [[[Platform]]]'s correct installation path or this message will continue to appear.<br/><br/>Fix this now?",
 	"ui_modal_installationpath_fix_auto_start" : "Fix auto start",
@@ -634,6 +634,7 @@
 	"ui_browse_modal_user_shortcut_arguments" : "Arguments:",
 	"ui_browse_modal_user_shortcut_command" : "Command:",
 	"ui_browse_modal_user_shortcut_url" : "URL:",
+	"ui_browse_modal_user_shortcut_usage_hint" : "Quickly access a local file or folder, a website or a console command by clicking on the corresponding wallpaper element.<br/><br/><b>Please note:</b> Nothing you enter here will be shared with anyone. Only enter files and websites that you fully trust. Do not copy-paste commands that you do not understand.",
 	"ui_browse_modal_user_shortcut_paste_warning" : "<b>Security notice</b>: Only enter files and websites that you fully trust. Do not copy-paste commands that you do not understand.",
 
 	"ui_browse_modal_seasonal_info_body" : "We have changed the theme of Wallpaper Engine to match the occasion! The theme will be changed back in a couple of days.<br/><br/>You can disable <i>seasonal theming</i> in the settings if you don't like this or change the skin there any time.<br/><br/>The <i>Discover</i> tab also has a special list of wallpapers that match the time of the year!",
@@ -1366,7 +1367,7 @@
 	"ui_editor_workshop_modal_rating_body_violence_rating" : "Cases such as characters holding weapons do not count as displays of violence and do not need to be marked.",
 	"ui_editor_workshop_modal_rating_header_sexual_content" : "Sexual content",
 	"ui_editor_workshop_modal_rating_body_sexual_content_warning" : "Real displays of sexual content are strictly forbidden.",
-	"ui_editor_workshop_modal_rating_body_sexual_content_rating" : "Mild nudity: Your wallpaper contains mild cases of partial nudity or other mildly sexual themes.</br>Full nudity: Your wallpaper contains nude characters or other predominantly sexual themes.</br>Adult content: Your wallpaper features sexual acts or sexual content that is for adults only.",
+	"ui_editor_workshop_modal_rating_body_sexual_content_rating" : "Mild nudity: Your wallpaper contains mild cases of partial nudity or other mildly sexual themes.<br/>Full nudity: Your wallpaper contains nude characters or other predominantly sexual themes.<br/>Adult content: Your wallpaper features sexual acts or sexual content that is for adults only.",
 	"ui_editor_workshop_modal_rating_button_violence_none" : "No Gore or Violence",
 	"ui_editor_workshop_modal_rating_button_violence_included" : "Severe non-real Gore or Violence",
 	"ui_editor_workshop_modal_rating_button_sexual_content_none" : "No Sexual Content",
@@ -3307,7 +3308,7 @@
 	"ui_editor_particle_element_renderer_sprite" : "Sprite",
 	"ui_editor_particle_element_renderer_sprite_description" : "Render particles as basic flat quads.",
 	"ui_editor_particle_element_renderer_spritetrail" : "Sprite trail",
-	"ui_editor_particle_element_renderer_spritetrail_description" : "Render particles as quads but rotate and stretch them based on their current velocity.",
+	"ui_editor_particle_element_renderer_spritetrail_description" : "Render particles as streaks that point in the direction they are moving",
 
 	"ui_editor_particle_remap_value_option_lifetimefraction" : "Lifetime fraction",
 	"ui_editor_particle_remap_value_option_maxlifetime" : "Maximum lifetime",
